Minor Improvement * Add Final * change While loop * remove Unused Imports